...
                    } label: {
                        HStack {
                            Image(systemName: "exclamationmark.triangle")
                                .accessibilityHidden(true)
                            Text(NSLocalizedString(
                                "settings.reset.all.data",
                                value: "Reset All Data",
                                comment: "Reset All Data"
                            ))
                        }
                        .foregroundStyle(.red)
                    }
                    .accessibilityLabel(NSLocalizedString(
...
                            value: "Planner Sessions",
                            comment: "Export include planner sessions toggle"
                        ), isOn: $exportIncludePlannerSessions)

                        Toggle(NSLocalizedString(
                            "settings.storage.export.include.settings",
                            value: "Settings",
                            comment: "Export include settings toggle"
                        ), isOn: $exportIncludeSettings)
                    }
                    .padding(.horizontal)

                    Button {
...
